feature: change the mouse button when I press the button

--- a/01-area-capture/popup.html
+++ b/01-area-capture/popup.html
@@ -29,6 +29,7 @@
         <h1>Area Capture Example</h1>
         <button id="capture-button">Capture</button>
     </div>
+    <script src="click.js"></script>
 </body>
 
 </html>
